[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/world.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/boom.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/effects/hop.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 31.7175

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float progress : hint_range(0.0, 1.0);
uniform float noise_desnity = 60;
uniform float beam_size : hint_range(0.01, 0.15);
uniform vec4 color : hint_color = vec4(0.0, 1.02, 1.2, 1.0);

// We are generating our own noise here. You could experiment with the 
// built in SimplexNoise or your own noise texture for other effects.
vec2 random(vec2 uv){
    uv = vec2( dot(uv, vec2(127.1,311.7) ),
               dot(uv, vec2(269.5,183.3) ) );
    return -1.0 + 2.0 * fract(sin(uv) * 43758.5453123);
}

float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);

    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix( mix( dot( random(uv_index + vec2(0.0,0.0) ), uv_fract - vec2(0.0,0.0) ),
                     dot( random(uv_index + vec2(1.0,0.0) ), uv_fract - vec2(1.0,0.0) ), blur.x),
                mix( dot( random(uv_index + vec2(0.0,1.0) ), uv_fract - vec2(0.0,1.0) ),
                     dot( random(uv_index + vec2(1.0,1.0) ), uv_fract - vec2(1.0,1.0) ), blur.x), blur.y) * 0.5 + 0.5;
}

void fragment()
{
	vec4 tex = texture(TEXTURE, UV);
	
	float noise = noise(UV * noise_desnity) * UV.y;
	
	float d1 = step(progress, noise);
	float d2 = step(progress - beam_size, noise);
	
	vec3 beam = vec3(d2 - d1) * color.rgb;
	
	tex.rgb += beam;
	tex.a *= d2;
	
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/progress = 0.0
shader_param/noise_desnity = 60.0
shader_param/beam_size = 0.093
shader_param/color = Color( 0.0666667, 0.0705882, 0.0705882, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.3233

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.395973, 0.744966, 1 )
colors = PoolColorArray( 0.174713, 0.253443, 0.894531, 1, 0.0335083, 0.414287, 0.953125, 1, 0, 0.648438, 1, 1, 0, 0.953125, 1, 1 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="die_tween" type="Tween" parent="."]

[node name="die_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="pos_shake_tween" type="Tween" parent="."]

[node name="rot_shake_tween" type="Tween" parent="."]

[node name="jump_effect" type="CPUParticles2D" parent="."]
position = Vector2( 0.594604, 27.9464 )
emitting = false
amount = 100
lifetime = 0.6
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 5, 1 )
direction = Vector2( 0, 1 )
spread = 42.58
initial_velocity = 43.01
scale_amount = 2.9
color_ramp = SubResource( 5 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="die_tween" to="." method="_on_die_tween_tween_all_completed"]
